--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "functions": {
     "api/**/*.ts": {
       "runtime": "nodejs20.x",
-      "bundle": true,
-      "includeFiles": [
-        "lib/**"
-      ]
+      "includeFiles": ["lib/**"]
     }
   }
 }
