--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "functions": {
     "api/**/*.ts": {
       "runtime": "nodejs20.x",
-      "includeFiles": ["lib/**"]
+      "includeFiles": "lib/**"
     }
   }
 }
