--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "@vercel/node"
     ],
-    "moduleResolution": "bundler",
+    "moduleResolution": "node16",
     "isolatedModules": true,
     "moduleDetection": "force",
     "allowJs": true,
